--- a/style.css
+++ b/style.css
@@ -3,12 +3,15 @@
 
 body {
   font-family: roboto, sans-serif;
+  margin: 0;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .header {
-  background:#1F2973;
+  background: #1F2973;
   display: flex;
   flex-direction: column;
   padding: 16px 200px 150px 200px;
@@ -25,17 +28,31 @@ body {
 .left {
   display: flex;
   align-items: center;
+  gap: 14px;
   padding: 8px;
+}
+
+li, ul {
+  list-style-type: none;
+  margin: 0px;
+  color: #E5E7EB;
+  padding: 0px;
+}
+
+a, secondary_main,text {
+  text-decoration: none;
+  color: #E5E7EB;
+  font-size: 18px;
 }
 
 .header_two {
   display: flex;
   flex-direction: row-reverse;
   align-items: space-between;
-  gap: 16px;
+  gap: 50px;
 }
 
-img {
+.header_two_left img {
   width: 500px;
   height: 250px;
 }
@@ -49,4 +66,132 @@ img {
   display: flex;
   flex-flow: column wrap;
   gap: 9px;
+}
+
+.hero_main {
+  font-size: 48px;
+  font-weight: 900;
+  color: #F9FAF8;
+}
+
+.header_two_right button {
+  background: #3882f6;
+  border: none;
+  color: white;
+  border-radius: 8px;
+  padding: 5px 20px 5px 20px;
+}
+
+.body_one {
+  padding: 60px 300px 150px 300px;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.body_one_b1 {
+  display: flex;
+  justify-content: center;
+  align-itens: center;
+}
+
+.body_one_b1 div {
+  font-weight: 900;
+  font-size: 36px;
+  color: #152937;
+}
+
+.body_one_b2 {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+}
+
+.body_one_b2_O {
+  display: flex;
+  flex-flow: column wrap;
+  width: 250px;
+}
+
+.body_one_b2_O img {
+  border: 5px solid #3882F6;
+  border-radius: 10px;
+  width: 230px;
+  height: 230px;
+}
+
+.body_two {
+  color: #E5E7EB;
+  padding: 150px 320px 150px 320px;
+  background: #E5E7EB;
+}
+
+.body_two_b1 {
+  display: flex;
+  flex-flow: column wrap;
+  gap: 5px;
+}
+
+.body_two_b1 .text {
+  font-size: 36px;
+  color: #1F2937;
+  font-style: italic;
+}
+
+.author {
+  flex: 1;
+  align-self: flex-end;
+  padding-right: 50px;
+  font-weight: bold;
+  font-size: 22px;
+  color: black;
+}
+
+.body_three {
+  margin: 100px 200px;
+  display: flex;
+  justify-content: space-between;
+  background: #3882F6;
+}
+
+.body_three_first {
+  display: flex;
+  flex-flow: column nowrap;
+  align-content: flex-start;
+  justify-content: center;
+}
+
+.body_three_first .bolder {
+  font-weight: bold;
+  font-size: 22px;
+}
+
+.body_three_first div {color: white;}
+
+.body_three_second {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.body_three_second button {
+  border-radius: 10px;
+  border: 5px solid white;
+  padding: 5px 20px 5px 20px;
+  background: #3882F6;
+  color: white;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  background:#1F2937;
+  padding: 12px;
+}
+
+.footer_one {
+  margin-top: 50px;
+  font-size: 18px;
+  color: #E5E7EB;
 }
