--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   background: #1F2973;
   display: flex;
   flex-direction: column;
-  padding: 16px 200px 150px 200px;
+  padding: 16px 200px 130px 200px;
   gap: 150px;
 }
 
@@ -39,7 +39,12 @@ li, ul {
   padding: 0px;
 }
 
-a, secondary_main,text {
+.logo {
+  font-size: 24px;
+  color: #F9FAF8;
+}
+
+a, .secondary_main {
   text-decoration: none;
   color: #E5E7EB;
   font-size: 18px;
@@ -53,7 +58,7 @@ a, secondary_main,text {
 }
 
 .header_two_left img {
-  width: 500px;
+  width: 600px;
   height: 250px;
 }
 
@@ -76,10 +81,12 @@ a, secondary_main,text {
 
 .header_two_right button {
   background: #3882f6;
+  margin-right: auto;
+  margin-top: 12px;
   border: none;
   color: white;
   border-radius: 8px;
-  padding: 5px 20px 5px 20px;
+  padding: 5px 35px 5px 35px;
 }
 
 .body_one {
@@ -116,10 +123,14 @@ a, secondary_main,text {
 .body_one_b2_O img {
   border: 5px solid #3882F6;
   border-radius: 10px;
-  width: 230px;
-  height: 230px;
+  width: 190px;
+  height: 190px;
 }
-
+.text {
+  text-align: center;
+  color: #E4C3B5;
+  font-size: 18px;y
+}
 .body_two {
   color: #E5E7EB;
   padding: 150px 320px 150px 320px;
@@ -132,7 +143,7 @@ a, secondary_main,text {
   gap: 5px;
 }
 
-.body_two_b1 .text {
+.body_two_b1 .tt {
   font-size: 36px;
   color: #1F2937;
   font-style: italic;
@@ -149,6 +160,8 @@ a, secondary_main,text {
 
 .body_three {
   margin: 100px 200px;
+  padding: 45px 140px;
+  border-radius: 10px;
   display: flex;
   justify-content: space-between;
   background: #3882F6;
@@ -177,7 +190,7 @@ a, secondary_main,text {
 .body_three_second button {
   border-radius: 10px;
   border: 5px solid white;
-  padding: 5px 20px 5px 20px;
+  padding: 5px 50px 5px 50px;
   background: #3882F6;
   color: white;
 }
